Add electricity cost reporting to the charging tool.